Fix overflow of input for range filter #122

--- a/sitemedia/scss/base/page/_filter.scss
+++ b/sitemedia/scss/base/page/_filter.scss
@@ -276,6 +276,7 @@
 
   .filter__search-field {
     border: 0;
+    overflow: auto;
     padding-left: 0.5rem;
     width: 90%;
     outline: none;
